--- a/marco zero.html
+++ b/marco zero.html
@@ -12,11 +12,10 @@
         <ul>
             <li>Historia</li>
             <li>
-                <a href="./index.html">
-                    
+                <a href="index.html">Pontos turisticos</a>    
                 </a>
             </li>
-            <li>Pacotes de Viagens</li>
+            <li>
         </ul>
     </header>
 </body>
